@@ -3,11 +3,6 @@ plugindir = $(libdir)/xfce4/panel-plugins/
 plugin_LTLIBRARIES = 				\
 	libdatetime.la
 
-libdatetime_la_LDFLAGS = 			\
-	-avoid-version				\
-	-module
-#-export-dynamic
-
 libdatetime_la_SOURCES = 			\
 	datetime.h				\
 	datetime.c				\
@@ -17,22 +12,31 @@ libdatetime_la_SOURCES = 			\
 libdatetime_la_CFLAGS = 			\
 	-I$(top_srcdir)				\
 	-DLOCALEDIR=\"$(localedir)\"		\
-	@LIBXFCE4PANEL_CFLAGS@
+	$(GTK_CFLAGS)				\
+	$(LIBXFCE4PANEL_CFLAGS)			\
+	$(LIBXFCEGUI4_CFLAGS)			\
+	$(LIBXFCE4UTIL_CFLAGS)
+
+libdatetime_la_LDFLAGS = 			\
+	-avoid-version				\
+	-module
+
+if HAVE_CYGWIN
+libdatetime_la_LDFLAGS += 			\
+	-no-undefined
+endif
 
 libdatetime_la_LIBADD = 			\
-	@LIBXFCE4PANEL_LIBS@
-#	../../libxfce4panel/libxfce4panel.la
-
-#libdatetime_la_DEPENDENCIES = 			\
-#	../../libxfce4panel/libxfce4panel.la
-
-%.desktop.in: %.desktop.in.in
-	sed -e "s^@INTERNAL_PLUGIN_PATH@^$(libdir)/xfce4/panel-plugins^"  < $< > $@
-
-desktop_in_in_files = datetime.desktop.in.in
-desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
+	$(GTK_LIBS)				\
+	$(LIBXFCE4PANEL_LIBS)			\
+	$(LIBXFCEGUI4_LIBS)			\
+	$(LIBXFCE4UTIL_LIBS)
 
 desktopdir = $(datadir)/xfce4/panel-plugins
+desktop_in_in_files = datetime.desktop.in.in
+desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
+%.desktop.in: %.desktop.in.in
+	sed -e "s,\@libdir\@,$(libdir),g" < $< > $@
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
@@ -41,5 +45,6 @@ EXTRA_DIST =					\
 	$(desktop_in_in_files)
 
 DISTCLEANFILES =				\
-	$(desktop_DATA) $(desktop_in_files)
+	$(desktop_DATA)				\
+	$(desktop_in_files)
 
