@@ -1,3 +1,14 @@
+2006-12-17  Nick Schermer <nick@xfce.org>
+    * Move the file into trunk.
+    * Fix compiler warnings.
+    * Add LINGUAS support.
+    * Cygwin Fix.
+    * Fix compiler warnings and header includes.
+    * Use new module detection for the panel.
+    * Fix multiple memory leaks.
+    * Fix crash when the plugin was removed from the panel.
+    * Use panel slice macros for creating structures.
+
 2006-10-06  Remco den Breeje <remco@sx.mine.nu>
     * release 0.4.0
     compatible with xfce 4.4
